# jfc

./: .coderabbit.yaml  .debug-journal.md  .gitattributes  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  AutoCompressor.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ContextDistillation.txt  GAPS.md  LongLLMLingua.txt  MEMORY.md  PLAN.md  README.md  SECURITY.md  jfc-transcript.md  session-ses_128a.md
crates/jfc-agent/: Cargo.toml
crates/jfc-agent/src/: id.rs  lib.rs  message.rs  registry.rs  state.rs
crates/jfc-agents/: Cargo.toml
crates/jfc-agents/src/: builtins.rs  evals.rs  lib.rs  lifecycle.rs  plugin_resources.rs  registry.rs  state.rs
crates/jfc-anthropic-sdk/: Cargo.toml
crates/jfc-anthropic-sdk/src/: agents.rs  batches.rs  client.rs  environments.rs  error.rs  files.rs  lib.rs  managed_agents.rs  memory_stores.rs  messages.rs  models.rs  pagination.rs  retry.rs  sessions.rs  skills.rs  sse.rs  user_profiles.rs  vaults.rs  webhooks.rs
crates/jfc-audit/: Cargo.toml
crates/jfc-audit/examples/: refusal_flow.rs
crates/jfc-audit/src/: dispatcher.rs  enumerator.rs  error.rs  lib.rs  orchestrator.rs  pair.rs  reachability.rs  redteam.rs  store.rs  suspicious_point.rs  taint.rs  types.rs
crates/jfc-audit/tests/: jailbreak_robustness.rs  over_refusal_eval.rs  technique_coverage.rs
crates/jfc-auth/: Cargo.toml
crates/jfc-auth/src/: credential_vault.rs  device_flow.rs  lib.rs  oauth_core.rs  workload_identity.rs
crates/jfc-bridge/: Cargo.toml
crates/jfc-bridge/src/: client.rs  lib.rs  model.rs  server.rs  store.rs  time.rs  token.rs
crates/jfc-changeset/: Cargo.toml
crates/jfc-changeset/benches/: changeset.rs
crates/jfc-changeset/src/: error.rs  ledger.rs  lib.rs  state.rs  store.rs  types.rs
crates/jfc-changeset/tests/: perf_baseline.rs
crates/jfc-compress/: Cargo.toml
crates/jfc-compress/src/: content_aware.rs  lib.rs  volatile.rs
crates/jfc-config/: Cargo.toml
crates/jfc-config/src/: atomic_write.rs  catch_up_state.rs  claude_settings.rs  feature_config.rs  keybindings.rs  lib.rs  paths.rs  quiet_hours.rs  scheduled_tasks.rs  trace.rs
crates/jfc-config/tests/: screen_reader_mode.rs
crates/jfc-core/: Cargo.toml
crates/jfc-core/src/: agent_def.rs  assertions.rs  attachment.rs  attention.rs  compaction.rs  context.rs  context_budget.rs  context_management.rs  decision_quality.rs  diff.rs  diff_compression.rs  execution.rs  execution_result.rs  fanout.rs  hierarchical_compression.rs  ids.rs  information_bottleneck.rs  kv_cache.rs  lib.rs  mcp_elicitation.rs  message.rs  mission_routing.rs  paging.rs  plan_cache.rs  position_encoding.rs  prompt_queue.rs  routing.rs  semantic_hash.rs  server_tool.rs  task.rs  task_execution.rs  task_store.rs  tool.rs  tool_call.rs  tool_dispatch_model.rs  tool_input.rs  tool_input_snapshot.txt  tool_kind.rs  tool_output.rs  tool_retrieval.rs  (+2 more)
crates/jfc-core/tests/: mission_routing.rs  tool_input_wire.rs  tool_kind_parse.rs  workspace_dependency_rules.rs
crates/jfc-daemon/: Cargo.toml
crates/jfc-daemon/src/: control.rs  cron.rs  lib.rs  logs.rs  pid.rs  reconcile.rs  registry.rs  runtime.rs  scheduled_tasks.rs  shortcuts.rs  state.rs  svcs.rs  tests.rs  worker.rs
crates/jfc-dashboard/: Cargo.toml
crates/jfc-dashboard/examples/: serve.rs  smoke.rs
crates/jfc-dashboard/src/: dashboard.html  lib.rs  server.rs  trace.rs
crates/jfc-design/: Cargo.toml
crates/jfc-design/assets/: preview-runtime.js
crates/jfc-design/src/: api.rs  browser.rs  capabilities.rs  design_system.rs  handoff.rs  inline.rs  lib.rs  main.rs  media.rs  mime.rs  project.rs  server.rs  server_main.rs  source_map.rs
crates/jfc-economy/: Cargo.toml
crates/jfc-economy/src/: auction.rs  bounty.rs  charter.rs  collusion.rs  cost.rs  ledger.rs  lib.rs  orchestrator.rs  rate_limiter.rs  reporting.rs  settlement.rs  solver.rs  trust.rs  types.rs  validator.rs
crates/jfc-engine/: Cargo.toml
crates/jfc-engine/src/: access_policy.rs  advisor.rs  agentic_vocabulary.rs  atomic_write.rs  attachments.rs  auto_classifier.rs  auto_mode.rs  auto_review.rs  autonomous_loop.rs  background.rs  bash_processes.rs  bridge_attestation.rs  cache_lineage.rs  changeset.rs  claude_status.rs  coach.rs  command_spec.rs  compact_archive.rs  config.rs  context.rs  context_accounting.rs  context_reduction.rs  context_reduction_pressure.rs  cost.rs  council.rs  council_directives.rs  council_session.rs  daemon_services.rs  diagnostics.rs  document_formats.rs  dreamer_scheduler.rs  effort.rs  engine.rs  exploration.rs  external_agent.rs  feature_gates.rs  goal.rs  guards.rs  idle_prefetch.rs  inline_tools.rs  (+34 more)
crates/jfc-engine/tests/: stale_edit_recovery.rs
crates/jfc-graph/: ADAPTER_PARITY.md  Cargo.toml  DESIGN_FUTURE.md  PLAN.md  README.md
crates/jfc-graph/benches/: graph_bench.rs
crates/jfc-graph/examples/: try_context.rs
crates/jfc-graph/research/: .gitignore
crates/jfc-graph/src/: analysis.rs  analysis_tools.rs  bfs_directed.rs  builder.rs  cache.rs  call_site.rs  capabilities.rs  cascade.rs  cfg.rs  cfg_rules.rs  closure.rs  co_change.rs  communities.rs  complexity.rs  complexity_rules.rs  content_index.rs  coverage.rs  csr.rs  data_dir.rs  dataflow.rs  dataflow_rules.rs  dominators.rs  edges.rs  enrichment.rs  fingerprint.rs  formatting.rs  framework_routes.rs  frontier.rs  graph.rs  history.rs  hll.rs  incremental.rs  index.rs  ir.rs  ir_map.rs  kind_specific.rs  label_reachability.rs  lib.rs  monomorphize.rs  nodes.rs  (+21 more)
crates/jfc-graph/tests/: fingerprint_stability.rs  node_id_stability.rs
crates/jfc-knowledge/: Cargo.toml
crates/jfc-knowledge/src/: definitions.rs  (+10 more)
crates/jfc-learn/: Cargo.toml
crates/jfc-markdown/: Cargo.toml
crates/jfc-mcp/: Cargo.toml
crates/jfc-memory/: Cargo.toml
crates/jfc-plugin-host/: Cargo.toml
crates/jfc-provider/: Cargo.toml
crates/jfc-providers/: Cargo.toml
crates/jfc-remote/: Cargo.toml
crates/jfc-session/: Cargo.toml
crates/jfc-tools/: Cargo.toml
crates/jfc-ui/: CLAUDE.md  Cargo.toml  build.rs  jfc-transcript.md
crates/jfc-voice/: Cargo.toml  VAD_RESEARCH.md
(+1832 files in other folders)
