[workspace]
resolver = "2"
members = [
    "crates/*",
    "references/wgpui/crates/gpui",
    "references/wgpui/crates/gpui_linux",
    "references/wgpui/crates/gpui_macos",
    "references/wgpui/crates/gpui_macros",
    "references/wgpui/crates/gpui_platform",
    "references/wgpui/crates/gpui_util",
    "references/wgpui/crates/gpui_web",
    "references/wgpui/crates/gpui_wgpu",
    "references/wgpui/crates/gpui_windows",
    "references/wgpui/crates/http_client",
    "references/wgpui/crates/sum_tree",
    "references/wgpui/crates/util",
    "references/wgpui/crates/zlog",
    "references/wgpui/crates/ztracing",
]
default-members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
gpui = { path = "references/wgpui/crates/gpui", default-features = false }
gpui_linux = { path = "references/wgpui/crates/gpui_linux", default-features = false }
gpui_macos = { path = "references/wgpui/crates/gpui_macos", default-features = false }
gpui_macros = { path = "references/wgpui/crates/gpui_macros" }
gpui_platform = { path = "references/wgpui/crates/gpui_platform", default-features = false }
gpui_util = { path = "references/wgpui/crates/gpui_util" }
gpui_web = { path = "references/wgpui/crates/gpui_web" }
gpui_wgpu = { path = "references/wgpui/crates/gpui_wgpu" }
gpui_windows = { path = "references/wgpui/crates/gpui_windows", default-features = false }
http_client = { path = "references/wgpui/crates/http_client" }
sum_tree = { path = "references/wgpui/crates/sum_tree" }
util = { path = "references/wgpui/crates/util" }
zlog = { path = "references/wgpui/crates/zlog" }
ztracing = { path = "references/wgpui/crates/ztracing" }

anyhow = "1.0.86"
ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
async-channel = "2.5.0"
async-compression = { version = "0.4", features = ["bzip2", "gzip", "futures-io"] }
async-fs = "2.1"
async-tar = "0.5.1"
async-task = "4.7"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
backtrace = "0.3"
bitflags = "2.6.0"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
criterion = { version = "0.5", features = ["html_reports"] }
ctor = "0.4.0"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
dirs = "6.0"
dunce = "1.0"
env_logger = "0.11"
futures = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "1.13"
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
globset = "0.4"
hdrhistogram = "7"
heapless = "0.9.2"
heck = "0.5"
http = "1.1"
http-body = "1.0"
image = "0.25.1"
indexmap = { version = "2.7.0", features = ["serde"] }
inventory = "0.3.19"
itertools = "0.14.0"
libc = "0.2"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
mach2 = "0.5"
metal = "0.33"
nix = "0.29"
objc = "0.2"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSGraphics"] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSCoder",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSGeometry",
    "NSNotification",
    "NSNull",
    "NSObjCRuntime",
    "NSObject",
    "NSProcessInfo",
    "NSRange",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSUndoManager",
    "NSValue",
    "objc2-core-foundation",
    "std",
] }
ordered-float = "2.1.1"
parking_lot = "0.12.1"
percent-encoding = "2.3.2"
pollster = "0.4.0"
postage = { version = "0.5", features = ["futures-traits"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
proc-macro2 = "1.0.93"
profiling = "1"
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
quote = "1.0.9"
rand = "0.9"
rayon = "1.8"
regex = "1.5"
rust-embed = { version = "8.11", features = ["include-exclude"] }
rustc-hash = "2.1.0"
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
schemars = { version = "1.0", features = ["indexmap2"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
serde_urlencoded = "0.7"
sha2 = "0.10"
shlex = "1.3.0"
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
stacksafe = "0.1"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
take-until = "0.2.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1" }
tracing = "0.1.40"
unicase = "2.6"
unicode-segmentation = "1.10"
url = "2.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
walkdir = "2.5"
wasm-bindgen = "0.2.113"
web-time = "1.1.0"
wgpu = { git = "https://github.com/zed-industries/wgpu.git", branch = "v29" }
which = "6.0.0"
windows-core = "0.61"

[workspace.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
]

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }
calloop = { git = "https://github.com/zed-industries/calloop" }

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = true

[profile.dev.package]
gpui_macros = { opt-level = 3 }
quote = { opt-level = 3 }
syn = { opt-level = 3 }
proc-macro2 = { opt-level = 3 }
taffy = { opt-level = 3 }
resvg = { opt-level = 3 }

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
