[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
eventsource-stream = "0.2"
futures = "0.3.32"
hmac = "0.13.0"
hex = "0.4"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "stream", "rustls"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
sha2 = "0.11.0"
thiserror = "2.0.12"
tokio = { version = "1" }
tracing = "0.1.40"
unicode-segmentation = "1.10"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = true

[profile.dev.package]
quote = { opt-level = 3 }
syn = { opt-level = 3 }
proc-macro2 = { opt-level = 3 }

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
declare_interior_mutable_const = "deny"
redundant_clone = "deny"
disallowed_methods = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
