[package]
name = "jfc-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Unified agent primitives: identity, state, registry, and message bus shared by all execution backends"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
fs2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
