[package]
name = "jfc-agents"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
jfc-core = { path = "../jfc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = "3"
