[package]
name = "jfc-agents"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
jfc-core = { path = "../jfc-core" }
jfc-config = { path = "../jfc-config" }
jfc-knowledge = { path = "../jfc-knowledge" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
