[package]
name = "jfc-audit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Graph-driven recursive bug auditor for jfc"

[dependencies]
async-trait = { workspace = true }
fs2 = "0.4"
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
