[package]
name = "jfc-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
dirs = "5"
rand = "0.10.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
toml = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
