[package]
name = "jfc-changeset"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Durable, reviewable, reversible agent change-set lifecycle for jfc"

[dependencies]
fs2 = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "4.7.0", features = ["html_reports"], package = "codspeed-criterion-compat" }
tempfile = "3"

[[bench]]
name = "changeset"
harness = false

[lints]
workspace = true
