[package]
name = "jfc-changeset"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Durable, reviewable, reversible agent change-set lifecycle for jfc"

[dependencies]
fs2 = { workspace = true }
linkscope = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "changeset"
harness = false

[lints]
workspace = true
