[package]
name = "jfc-config"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
dirs = "5"
tracing = { workspace = true }
jfc-mcp = { path = "../jfc-mcp" }

[features]
default = ["hooks", "permission-automation", "intent-gate"]
permission-automation = []
hooks = []
intent-gate = []
background-agents = []

[dev-dependencies]
tempfile = "3.27.0"
serial_test = "3"

[lints]
workspace = true
