[package]
name = "jfc-config"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = "5"
tracing = { workspace = true }
jfc-knowledge = { path = "../jfc-knowledge" }
jfc-mcp = { path = "../jfc-mcp" }
linkscope = { workspace = true }

[features]
default = ["hooks", "permission-automation", "intent-gate"]
permission-automation = []
hooks = []
intent-gate = []
background-agents = []

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true
