[package]
name = "jfc-daemon"
version = "0.1.0"
edition.workspace = true

[dependencies]
jfc-core = { path = "../jfc-core" }
jfc-provider = { path = "../jfc-provider" }

async-trait = { workspace = true }
chrono = { workspace = true }
dirs = "6"
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "time", "rt", "process", "signal", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
