[package]
name = "jfc-economy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Agent economy system for competitive code generation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
jfc-graph = { path = "../jfc-graph" }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
