[package]
name = "jfc-economy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Agent economy system for competitive code generation"

[dependencies]
jfc-core = { path = "../jfc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { package = "serde_norway", version = "0.9" }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
