[package]
name = "jfc-graph"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Graph-based context engine for semantic code analysis"

[dependencies]
petgraph = { version = "0.8", features = ["serde-1"] }
regex = "1"
# Pinned: tree-sitter grammars depend on AST shape; floating minor risks graph divergence across builds.
tree-sitter = "=0.25.10"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-kotlin-sg = "0.4"
tree-sitter-swift = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { version = "2", features = ["serde"] }
ignore = "0.4"
thiserror = { workspace = true }
tracing = { workspace = true }
# Phase 1 — parallelism + dense bitsets for direction-optimised BFS.
rayon = "1.10"
roaring = "0.10"
dashmap = "6"
# Deterministic, cross-machine-stable digest for `Fingerprint`. SipHash
# (DefaultHasher) is process-specific and varies across stdlib versions, so
# indices built on CI couldn't be shared with developer machines. BLAKE3 is
# fixed, fast, and the same on every host.
blake3 = "1.5"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_bench"
harness = false

[lints]
workspace = true
