[package]
name = "jfc-knowledge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
dirs = "5"
linkscope = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
