[package]
name = "jfc-learn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
jfc-core = { path = "../jfc-core" }
snafu = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
uuid = { workspace = true }
regex = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
